# YouTubeAutoBackupTool

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  YouTube_API_Instructions.md  main.py  pyproject.toml  requirements.txt
docs/: usage.md
src/: __init__.py  downloader.py  ui.py  utils.py
tests/: __init__.py  run_tests.py  test_utils.py
